kubernetes/prod/apps/default/plex/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/target: ipv4.${CLUSTER_SECRET_PRD_DOMAIN}
    ingress.kubernetes.io/proxy-body-size: "0"
    ingress.kubernetes.io/ssl-redirect: "true"
    meta.helm.sh/release-name: plex
    meta.helm.sh/release-namespace: default
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/app-root: /web
    nginx.ingress.kubernetes.io/client-body-buffer-size: 10g
    nginx.ingress.kubernetes.io/custom-http-errors: "418"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "480"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: plex
    app.kubernetes.io/managed-by: Helm
    chart: plex
    helm.toolkit.fluxcd.io/name: plex
    helm.toolkit.fluxcd.io/namespace: default
    heritage: Helm
    release: plex
  name: plex-opnsense-ingress
  namespace: default
spec:
  ingressClassName: external
  rules:
    - host: plex.${CLUSTER_SECRET_PRD_DOMAIN}
      http:
        paths:
          - backend:
              service:
                name: plex
                port:
                  number: 32400
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - plex.${CLUSTER_SECRET_PRD_DOMAIN}
      secretName: "${CLUSTER_SECRET_PRD_DOMAIN/./-}-tls"
